[tool.poetry]
name = "google-flights"
version = "0.1.0"
description = "Get Google Flights info."
authors = ["Kevin Ramdath <krpent@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
protobuf = "^3.20.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
