[tool.poetry]
name = "google-flights"
version = "0.1.0"
description = "Get Google Flights info."
authors = ["Kevin Ramdath <krpent@gmail.com>"]
repository = "https://github.com/minormending/google-flights"
readme = "README.md"
license = "MIT"
keywords = ["flights", "google", "rpc"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
protobuf = "^3.20.0"
protobuf2arr = "^0.1.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
nose2 = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
